--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
     </div>
     <div class="up main-text">Share video messages</div>
     <div class="main-text up">with Vimeo</div>
+    <video src="https://player.vimeo.com/progressive_redirect/playback/839065615/rendition/720p/file.mp4?loc=external&signature=8c3288532cad0b554c9592023bf5357260357df7f98fe63e4abf328eaadda535" autoplay loop></video>
     <div class="see">see plans</div>
     <div class="join">join for free</div>
   </section>
@@ -180,6 +181,7 @@
     <div class="comm-t">
       Ready to unlock the power of video?
     </div>
+    
     <div class="see">see plans</div>
     <div class="join">join for free</div>
   </section>
