--- a/index.html
+++ b/index.html
@@ -119,7 +119,9 @@
     </div>
     <div class="up main-text">Share video messages</div>
     <div class="main-text up">with Vimeo</div>
-    <div class="video"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/WLDeuIAFOyo?autoplay=1&loop=1&controls=0&mute=1&quality=1080p" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+    <div class="video">
+      <video src="./assets/vid.mp4" autoplay loop muted ></video>
+    </div>
     <div class="see">see plans</div>
     <div class="join">join for free</div>
   </section>
